# leiap_survey

./: .gitignore  README.rst  leiap21.yml  setup.cfg
data/artifacts/by_grid/: grid80_productions.txt  grid80_types.txt
data/artifacts/by_pts/: balearic_presence_productions.txt  balearic_presence_types.txt  balearic_weight_productions.txt  balearic_weight_types.txt
data/clustered/: clusters.txt
data/clustered/assemblage/grid/: cluster_grid80.dbf  cluster_grid80.shp  cluster_grid80.shx
data/fields/: Fields14_18.dbf  Fields14_18.sbn  Fields14_18.sbx  Fields14_18.shp  Fields14_18.shp.xml  Fields14_18.shx
data/geography/: grid80.dbf  grid80.sbn  grid80.sbx  grid80.shp  grid80.shp.xml  grid80.shx  multi_hillshade.tfw  multi_hillshade.tif.aux.xml  multi_hillshade.tif.ovr  multi_hillshade.tif.xml  torrentes.dbf  torrentes.sbn  torrentes.sbx  torrentes.shp  torrentes.shp.xml  torrentes.shx
data/sites/: sitesA.xlsx
docs/: conf.py  index.rst  modules.rst
docs/docs/doctrees/: environment.pickle  includeme.doctree  index.doctree  modules.doctree
docs/docs/html/: .buildinfo  genindex.html  includeme.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/source/: conf.py
leiap_survey/: __init__.py  cluster.py  pottery.py  temporal.py  utils.py
notebooks/: 0 - Data Wrangling Balearic Grids.ipynb  1 - Clustering Balearic Grids.ipynb  1 - Clustering Balearic SurveyPoints.ipynb  1 - Clustering.ipynb  2 - Visualization Assemblage Clusters.ipynb  2 - Visualization Spatial Clusters.ipynb  Assemblage Metric.ipynb
(+44 files in other folders)
