[metadata]
name = leiap_survey
version = 2021.9
author = Marcos Llobera
author_email = mllobera@uw.edu
description = Tools for LEIA project
long_description = file: README.MD
long_description_content_type = text/markdown
keywords = landsdcape_archaeology, survey, data_science, clustering
license = BSD 3-Clause License
classifiers =
	Programming Language :: Python :: 3.9
project_urls = 
	DigarLab = https://www.digarlab.uw.edu/

[options]
packages = find:
install_requires =
	geopandas
	scikit-learn
	rasterio
	openpyxl
	kneed
	tqdm
python_requires = >=3.9
